--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,17 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html,
-body {
+body,
+#root {
   margin: 0;
   padding: 0;
-}
-
-.container {
   width: "100%";
   height: "100%";
-  display: "flex";
 }
 
 .profile-card,
