Get calendar widget wired up

--- a/client/src/assets/styles/app-base.pcss
+++ b/client/src/assets/styles/app-base.pcss
@@ -4,11 +4,15 @@
  */
 @import "tailwindcss/base";
 
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
+
 /**
  * Here we add custom base styles, applied after the tailwind-base
  * classes
  *
  */
-html { 
-  font-size: 18px!important;
+html {
+  font-size: 18px !important;
 }
