--- a/client/src/assets/styles/components/typography.pcss
+++ b/client/src/assets/styles/components/typography.pcss
@@ -36,7 +36,8 @@ section > h2:first-of-type {
 }
 
 #app footer h2,
-#app footer ul a, #app footer h1 {
+#app footer ul a,
+#app footer h1 {
   @apply text-gray-50;
   font-family: Silka, "Palanquin Dark", sans-serif;
   font-weight: 400;
@@ -46,14 +47,14 @@ section > h2:first-of-type {
 .habit-description-label h2,
 .nav-label-primary > span,
 .user-nav-label span label,
-.responsive-nav-group >h2,
+.responsive-nav-group > h2,
 .responsive-nav-group > a {
   font-family: Nunito, Silka, sans-serif;
   font-weight: 700;
   @apply leading-tight uppercase text-balance-pshades-light text-xl tracking-wide;
 }
 
-.responsive-nav-group >h2 {
+.responsive-nav-group > h2 {
   @apply border-b-2;
 }
 
@@ -105,7 +106,8 @@ li#demo-indicator {
 }
 
 #current-habit-label-sm > span:first-of-type,
-#subnav .nav-links > li.hoverable a, #current-habit-sm span {
+#subnav .nav-links > li.hoverable a,
+#current-habit-sm span {
   @apply uppercase pt-2 lg:px-4 xl:text-2xl lg:text-xl lg:leading-9 leading-10;
   font-family: B612, Lato, Nunito, sans;
   font-weight: 700;
@@ -155,7 +157,7 @@ nav .menu-card p {
 .resp-nav-link:active::before,
 .resp-nav-link:hover::before {
   @apply text-balance-pshades-light;
-  content: url("../images/icons/slash.svg");
+  content: url("./images/icons/slash.svg");
   position: relative;
   z-index: -1;
   left: 0.5rem;
@@ -166,42 +168,43 @@ nav .menu-card p {
 }
 
 .slogan h1 {
-  color: #B7C892;
-  font: 800 3rem 'Poppins', sans-serif; 
-  text-shadow:
-    -1px -1px 0 #000,  
-    1px -1px 0 #000,
-      -1px 1px 0 #000,
-      1px 1px 0 #000;
-  -webkit-text-stroke: 1px #261C15;
-  letter-spacing: .05em;
+  color: #b7c892;
+  font: 800 3rem "Poppins", sans-serif;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+  -webkit-text-stroke: 1px #261c15;
+  letter-spacing: 0.05em;
   line-height: 1.25em;
   margin-top: 1rem;
 }
 
 h1.main-logo {
   @apply text-black;
-  font: 600 2.5rem 'Oleo Script Swash Caps', cursive;
-  letter-spacing: .05em;
+  font: 600 2.5rem "Oleo Script Swash Caps", cursive;
+  letter-spacing: 0.05em;
   line-height: 1.25em;
 }
 
 h1.main-logo span {
   color: #fb9417;
-  background: -webkit-linear-gradient(90deg, rgba(255,255,2550,.15) 0%, rgba(251,148,23,1) 50%);
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(255, 255, 2550, 0.15) 0%,
+    rgba(251, 148, 23, 1) 50%
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  padding-left: .5rem;
+  padding-left: 0.5rem;
 }
 
 h2.tagline {
-  font: 100 .85rem 'Silka', sans-serif; 
-  letter-spacing: .01em;
-  margin-top: -.75rem;
+  font: 100 0.85rem "Silka", sans-serif;
+  letter-spacing: 0.01em;
+  margin-top: -0.75rem;
 }
 
 .feature-card:nth-child(1) h2::after {
-  content: 'Build a sense of satisfaction';
+  content: "Build a sense of satisfaction";
 }
 
 .feature-card:nth-child(2) h2::after {
@@ -209,15 +212,15 @@ h2.tagline {
 }
 
 .feature-card:nth-child(3) h2::after {
-  content: '(whilst staying grounded)';
+  content: "(whilst staying grounded)";
 }
 
 .feature-card:nth-child(4) h2::after {
-  content: 'Mimic natural winners!';
+  content: "Mimic natural winners!";
 }
 
 .feature-card:nth-child(5) h2::after {
-  content: 'Experiment with demo data';
+  content: "Experiment with demo data";
 }
 
 .feature-card:nth-child(n) h2::after {
@@ -225,11 +228,14 @@ h2.tagline {
   display: none;
 }
 
-
 @media only screen and (min-width: 1920px) {
-  #app  > .wrapper .slogan h1 {
-      font-size: 5rem;
-    }
-    
-  nav .menu-card p { max-width: 90%; font-size: 1rem; line-height:1.4; }
+  #app > .wrapper .slogan h1 {
+    font-size: 5rem;
+  }
+
+  nav .menu-card p {
+    max-width: 90%;
+    font-size: 1rem;
+    line-height: 1.4;
+  }
 }
