--- a/client/src/assets/styles/components/typography.pcss
+++ b/client/src/assets/styles/components/typography.pcss
@@ -229,7 +229,7 @@ h2.tagline {
 }
 
 @media only screen and (min-width: 1920px) {
-  #app > .wrapper .slogan h1 {
+  #app > main.wrapper .slogan h1 {
     font-size: 5rem;
   }
 
