--- a/client/src/assets/styles/components/FeatureCard.scss
+++ b/client/src/assets/styles/components/FeatureCard.scss
@@ -19,10 +19,10 @@
       margin-top: -1.5rem;
       text-align: center;
     }
-    
+
     .wide > h2 {
       @apply text-center w-full;
-      margin-bottom: clamp(5vw, .1vw, 4rem);
+      margin-bottom: clamp(5vw, 0.1vw, 4rem);
       width: 75%;
     }
 
@@ -39,21 +39,28 @@
   @apply col-span-5;
 }
 
-
 .feature-card {
-  padding-right: clamp(4vw, .1vw, 6rem);
+  padding-right: clamp(4vw, 0.1vw, 6rem);
   padding-bottom: 5rem;
   padding-top: 3rem;
-  background: #686C7A;
-  background: linear-gradient(0deg, rgba(104,108,122,1) 17%, rgba(194,218,141,0.65) 87%);
-  box-shadow: 0 0 rgba(0,0,0,0), 0 0 rgba(0,0,0,0), var(--faint-shadow);
+  background: #686c7a;
+  background: linear-gradient(
+    0deg,
+    rgba(104, 108, 122, 1) 17%,
+    rgba(194, 218, 141, 0.65) 87%
+  );
+  box-shadow: 0 0 rgba(0, 0, 0, 0), 0 0 rgba(0, 0, 0, 0), var(--faint-shadow);
   border-radius: 10vw;
 }
 
 .feature-card::before {
-  content: '';
-  background: rgb(255,255,255);
-  background: linear-gradient(230deg, rgba(255,255,255,0.5) 14%, rgba(194,218,141,0) 52%);
+  content: "";
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    230deg,
+    rgba(255, 255, 255, 0.5) 14%,
+    rgba(194, 218, 141, 0) 52%
+  );
   position: absolute;
   width: 100%;
   height: 100%;
@@ -65,7 +72,7 @@
 }
 
 .feature-card::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   max-width: 50%;
@@ -74,7 +81,7 @@
   border-bottom-left-radius: 10vw;
   z-index: 0;
   opacity: 0.5;
-  background: no-repeat -40px url('../../images/icons/pyramid.svg');
+  background: no-repeat -40px url("../../images/icons/pyramid.svg");
   background-size: cover;
 }
 
@@ -84,39 +91,40 @@
   padding: clamp(1vw, 0.05vw, 0.5rem);
   max-height: 356px;
   border-radius: 1.5rem;
-  margin-left: clamp(4vw, .1vw, 6rem);
+  margin-left: clamp(4vw, 0.1vw, 6rem);
   margin-bottom: 8rem;
 }
-  
+
 .feature-card.img-loaded:nth-child(1)::after {
-  background-image: url('../../images/photos/journal-masked.png');  
+  background-image: url("../../images/photos/journal-masked.png");
 }
 
 .feature-card.img-loaded:nth-child(2)::after {
-  background-image: url('../../images/photos/inspiring-blocks.png');  
+  background-image: url("../../images/photos/inspiring-blocks.png");
 }
 
 .feature-card.img-loaded:nth-child(3)::after {
   background-position-x: 50%;
-  background-image: url('../../images/photos/blocks_pyramid_masked.png');  
+  background-image: url("../../images/photos/blocks_pyramid_masked.png");
 }
 
 .feature-card.img-loaded:nth-child(4)::after {
-  background-image: url('../../images/photos/hierarchy-blocks.png');  
+  background-image: url("../../images/photos/hierarchy-blocks.png");
 }
 
 .feature-card.img-loaded:nth-child(5)::after {
-  background-image: url('../../images/photos/demo-data.png');  
+  background-image: url("../../images/photos/demo-data.png");
 }
 
-.feature-card p, .feature-card blockquote {
+.feature-card p,
+.feature-card blockquote {
   font-size: 1.3rem;
-  line-height: 1.4; 
+  line-height: 1.4;
   font-weight: 200;
   margin-bottom: 1.25rem;
 }
 
-.feature-card blockquote { 
+.feature-card blockquote {
   margin-top: 1rem;
   position: relative;
   font-size: 0.75em;
@@ -127,10 +135,11 @@
   text-align: left;
 }
 
-.feature-card blockquote::before, .feature-card blockquote::after, {
+.feature-card blockquote::before,
+.feature-card blockquote::after {
   position: absolute;
   font-family: "Font Awesome 5 Free";
-  content: '';
+  content: "";
   width: 3rem;
   height: 3rem;
   color: black;
@@ -140,13 +149,13 @@
 }
 
 #app .feature-card blockquote::before {
-  content: '\f10d';
+  content: "\f10d";
   top: -40px;
   left: -38px;
 }
 
-#app .feature-card blockquote::after, {
-  content: '\f10e';
+#app .feature-card blockquote::after {
+  content: "\f10e";
   bottom: 0px;
   right: -26px;
 }
@@ -155,7 +164,8 @@ figcaption {
   @apply font-sans font-extralight text-xs text-right mt-2;
 }
 
-figure figcaption, figcaption:last-child {
+figure figcaption,
+figcaption:last-child {
   font-size: 0.5rem;
 }
 
@@ -168,21 +178,19 @@ figure figcaption, figcaption:last-child {
 }
 
 .feature-card h2 {
-  font-size:2rem;
-  text-shadow:
-      -1px 1px 0 #E0E0E0,
-      1px 1px 0 #E0E0E0;
+  font-size: 2rem;
+  text-shadow: -1px 1px 0 #e0e0e0, 1px 1px 0 #e0e0e0;
 }
 
 .feature-card button {
   background: #3349c1;
-  right: clamp(4vw, .1vw, 6rem);
+  right: clamp(4vw, 0.1vw, 6rem);
   width: 12rem;
 }
 
 @media only screen and (min-width: 768px) {
   .feature-card::after {
-    width:100%;
+    width: 100%;
   }
 
   .long-content-wrapper {
@@ -201,14 +209,14 @@ figure figcaption, figcaption:last-child {
     padding-top: 2rem;
     max-height: none;
   }
-  
+
   .feature-card.wide > .feature-card-content button {
     bottom: 0.5rem;
   }
 }
 
 @media only screen and (min-width: 1024px) {
-  .wrapper >.feature-card > .feature-card-content > button {
+  main.wrapper > .feature-card > .feature-card-content > button {
     bottom: 1rem;
     right: calc(50% - 6rem);
   }
@@ -230,7 +238,7 @@ figure figcaption, figcaption:last-child {
   }
   .feature-card:nth-child(2) {
     grid-column: span 5;
-    grid-row: 1/ span 7;
+    grid-row: 1 / span 7;
   }
   .feature-card:nth-child(1) {
     grid-column: 7 / span 7;
@@ -256,9 +264,10 @@ figure figcaption, figcaption:last-child {
     padding: 6rem clamp(4vw, 0.1vw, 6rem) 4rem;
   }
 
-  .long-content, .long-content-wrapper {
-    display:block;
-    overflow:hidden;
+  .long-content,
+  .long-content-wrapper {
+    display: block;
+    overflow: hidden;
   }
 
   .feature-card-section {
@@ -273,7 +282,8 @@ figure figcaption, figcaption:last-child {
     grid-column: -1 / -8;
   }
 
-  .feature-card-content, .feature-card.wide .feature-card-content {
+  .feature-card-content,
+  .feature-card.wide .feature-card-content {
     border-radius: 5rem;
     padding: 4rem;
     text-align: left;
@@ -285,7 +295,8 @@ figure figcaption, figcaption:last-child {
     display: none;
   }
 
-  p.long-content, #long-content-wrapper {
+  p.long-content,
+  #long-content-wrapper {
     display: block;
   }
 
@@ -305,16 +316,20 @@ figure figcaption, figcaption:last-child {
     @apply text-xl;
   }
 
-  #app .wrapper > .feature-card-section >.feature-card::after, .wrapper > .feature-card-section >.feature-card.wide::after {
+  #app main.wrapper > .feature-card-section > .feature-card::after,
+  main.wrapper > .feature-card-section > .feature-card.wide::after {
     top: 50%;
     border-top-right-radius: unset;
     border-bottom-right-radius: unset;
   }
 
-  .wrapper > .feature-card-section >.feature-card:nth-of-type(2n)::after {
+  main.wrapper > .feature-card-section > .feature-card:nth-of-type(2n)::after {
     left: 85%;
   }
-  #app .wrapper > .feature-card-section >.feature-card:nth-of-type(2n+1)::after {
+  #app
+    main.wrapper
+    > .feature-card-section
+    > .feature-card:nth-of-type(2n + 1)::after {
     left: -50%;
   }
 
@@ -322,42 +337,44 @@ figure figcaption, figcaption:last-child {
     @apply mt-12;
   }
 
-/* Move titles into whitespace */
-  .wrapper > .feature-card.wide > h2, .wrapper > .feature-card > h2 {
+  /* Move titles into whitespace */
+  main.wrapper > .feature-card.wide > h2,
+  main.wrapper > .feature-card > h2 {
     position: absolute;
     top: 8rem;
     width: 50%;
   }
-  
-  .wrapper .feature-card h2::before {
+
+  main.wrapper .feature-card h2::before {
     position: absolute;
-    content: '';
+    content: "";
     width: 50%;
     height: 20px;
-    background-color: #6478E9;
+    background-color: #6478e9;
     top: 1em;
     z-index: -1;
   }
-  
-  .wrapper .feature-card h2::after {
+
+  main.wrapper .feature-card h2::after {
     display: block;
     margin: 4rem 0;
   }
 
-  .wrapper .feature-card:nth-child(2n + 1) h2 {
+  main.wrapper .feature-card:nth-child(2n + 1) h2 {
     left: -34vw;
   }
-  
-  .wrapper .feature-card:nth-child(2n + 1) h2 , .wrapper .feature-card:nth-child(2n + 1) h2::after {
+
+  main.wrapper .feature-card:nth-child(2n + 1) h2,
+  main.wrapper .feature-card:nth-child(2n + 1) h2::after {
     text-align: left;
   }
 
-  .wrapper .feature-card:nth-child(2n) h2 {
-    left:36vw;
+  main.wrapper .feature-card:nth-child(2n) h2 {
+    left: 36vw;
     text-align: right;
   }
 
-  .wrapper .feature-card:nth-child(2n) h2::after {
+  main.wrapper .feature-card:nth-child(2n) h2::after {
     text-align: right;
   }
 }
