--- a/client/src/assets/styles/components/MaskHeader.scss
+++ b/client/src/assets/styles/components/MaskHeader.scss
@@ -53,7 +53,7 @@ div.mask-wrapper {
   transition: height 0.3s ease;
 
   > header {
-    @apply sm:h-12 lg:h-16 z-10 flex-none h-16;
+    @apply z-10 flex-none h-16;
   }
 
   #current-habit-label span {
