--- a/client/src/components/Header/styles.pcss
+++ b/client/src/components/Header/styles.pcss
@@ -19,11 +19,12 @@
 }
 
 .mask-wrapper .wide-nav {
-  @apply top-16 lg:-mt-4 ml-1/3 lg:border-balance-tershades-gray bg-balance-tershades-gray lg:border-0 md:top-12 lg:flex lg:justify-end lg:items-center lg:static lg:flex-row lg:bg-transparent sm:flex-row sm:flex-wrap lg:flex-nowrap absolute left-0 z-20 flex-col hidden w-full border-b-4;
+  width: 33vw;
+  @apply top-28 sm:top-24 right-0 h-full lg:-mt-4 ml-1/3 lg:border-balance-tershades-gray bg-balance-tershades-gray lg:border-0 lg:flex lg:justify-end lg:items-center lg:static lg:flex-row lg:bg-transparent sm:flex-row sm:flex-wrap lg:flex-nowrap absolute z-20 flex-col hidden border-b-4 lg:w-full;
 }
 
 .mask-wrapper .wide-nav .label-wrapper {
-  @apply md:pl-1 sm:pl-24 sm:my-2 sm:w-2/5 lg:w-auto lg:p-0 lg:border-0 lg:flex lg:flex-1 lg:justify-end lg:flex-row content-center justify-end hidden px-4 pt-1 pb-2;
+  @apply md:pl-1 sm:pl-24 sm:my-2 sm:w-2/5 lg:w-auto lg:p-0 lg:border-0 lg:flex lg:flex-1 pb-4 lg:justify-end lg:flex-row content-center justify-end hidden px-4;
 }
 
 .nav-label-primary {
