--- a/client/src/assets/styles/components/MaskHeader.scss
+++ b/client/src/assets/styles/components/MaskHeader.scss
@@ -320,6 +320,7 @@ span.logo svg path,
   div.mask-wrapper {
     @apply relative z-40 overflow-hidden;
     mask: no-repeat 10px -20px url("../../images/fib-mask-1900-420.svg");
+    transition: 0.3s height ease-in;
   }
   .mask-wrapper .logo {
     display: none;
