--- a/client/src/components/Header/styles.pcss
+++ b/client/src/components/Header/styles.pcss
@@ -19,8 +19,8 @@
 }
 
 .mask-wrapper .wide-nav {
-  width: 33vw;
-  @apply top-28 sm:top-24 right-0 h-full lg:-mt-4 ml-1/3 lg:border-balance-tershades-gray bg-balance-tershades-gray lg:border-0 lg:flex lg:justify-end lg:items-center lg:static lg:flex-row lg:bg-transparent sm:flex-row sm:flex-wrap lg:flex-nowrap absolute z-20 flex-col hidden border-b-4 lg:w-full;
+  width: 50vw;
+  @apply top-28 border-l-2 border-balance-basic-ter sm:top-24 right-0 h-full lg:-mt-4 ml-1/3 lg:border-balance-tershades-gray bg-balance-tershades-gray lg:border-0 lg:flex lg:justify-end lg:items-center lg:static lg:flex-row lg:bg-transparent sm:flex-row sm:flex-wrap lg:flex-nowrap absolute z-20 flex-col hidden border-b-4 lg:w-full;
 }
 
 .mask-wrapper .wide-nav .label-wrapper {
