--- a/client/src/components/Header/styles.pcss
+++ b/client/src/components/Header/styles.pcss
@@ -20,7 +20,7 @@
 
 .mask-wrapper .wide-nav {
   width: 50vw;
-  @apply top-28 drop-shadow-md border-l-2 border-balance-basic-gray sm:top-24 h-full xl:-mt-4 ml-1/3 lg:border-balance-tershades-gray bg-balance-tershades-gray lg:border-0 lg:flex lg:justify-end lg:items-center lg:static lg:flex-row lg:bg-transparent sm:flex-row sm:flex-wrap lg:flex-nowrap absolute z-20 flex-col hidden border-b-4 lg:w-full rounded-t-3xl;
+  @apply top-28 drop-shadow-md border-l-2 border-balance-basic-gray sm:top-24 h-full xl:-mt-4 ml-1/3 lg:border-balance-tershades-gray bg-balance-tershades-gray lg:border-0 lg:flex lg:justify-end lg:items-center lg:static lg:flex-row lg:bg-transparent sm:flex-row sm:flex-wrap lg:flex-nowrap absolute z-20 flex-col hidden border-b-4 lg:w-full;
 }
 
 .mask-wrapper .wide-nav .label-wrapper {
