Fix scrolling issues on app container and date selector icons

--- a/client/src/assets/styles/components/global.pcss
+++ b/client/src/assets/styles/components/global.pcss
@@ -8,7 +8,6 @@ div.inactive {
 }
 
 #app {
-  overflow: auto;
   height: 100%;
 }
 
@@ -81,6 +80,9 @@ div.sm-selector-container .domain-selector {
 @media only screen and (min-width: 768px) {
   main.wrapper > .cloud-man-vector {
     grid-column: 2 / span 3;
+  }
+  .date-card-wrapper {
+    max-width: "78%";
   }
 }
 
