--- a/client/src/assets/styles/components/webfonts.pcss
+++ b/client/src/assets/styles/components/webfonts.pcss
@@ -6,8 +6,8 @@
 
 @font-face {
   font-family: "Silka";
-  src: url("./fonts/silka-regular-webfont.woff2") format("woff2"),
-    url("./fonts/silka-regular-webfont.woff") format("woff");
+  src: url("/fonts/silka-regular-webfont.woff2") format("woff2"),
+    url("/fonts/silka-regular-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
