Refactor vis components useEffect

--- a/client/src/assets/styles/components/global.pcss
+++ b/client/src/assets/styles/components/global.pcss
@@ -32,7 +32,8 @@ main.wrapper {
 }
 
 #hamburger-wrapper input:checked ~ nav {
-  transform: translateX(-140%);
+  margin-right: 1rem;
+  transform: translateX(-134%);
   transition: transform 0.7s ease-in;
   -webkit-transition: transform 700ms;
   -webkit-transition: -webkit-transform 200ms;
