--- a/client/src/assets/styles/components/MaskHeader.scss
+++ b/client/src/assets/styles/components/MaskHeader.scss
@@ -84,6 +84,9 @@ body[class^="scroll"] .mask-wrapper {
   .sm-selector-container .date-today {
     transform: translateY(-0.22rem);
   }
+  .mask-wrapper .wide-nav {
+    top: 7rem;
+  }
 }
 
 #subnav {
