Fix vis components not rendering on route change

--- a/client/src/assets/styles/components/ui.pcss
+++ b/client/src/assets/styles/components/ui.pcss
@@ -172,7 +172,7 @@ main#append-habit .button-container.selected {
 }
 
 #collapse-tree {
-  @apply bottom-1 lg:bottom-auto lg:top-48;
+  @apply bottom-1 lg:bottom-auto lg:top-24 z-10;
 }
 
 /* Inputs */
