--- a/client/src/assets/styles/components/ui.pcss
+++ b/client/src/assets/styles/components/ui.pcss
@@ -1,19 +1,3 @@
-@layer utilities {
-  @variants active, focus {
-    .outline-light {
-      @apply border-4 border-balance-sshades-sat;
-    }
-    .outline-none {
-      overflow: hidden;
-      outline: none;
-    }
-    .outline-shadow {
-      @apply rounded-full;
-      box-shadow: 0 0 10px 0.75rem rgb(33, 25, 18);
-    }
-  }
-}
-
 thead tr {
   @apply hidden w-full flex items-center;
 }
@@ -101,15 +85,15 @@ label.reqd.not-added::after {
 
 .button-container > span,
 .button-group > button {
-  @apply flex h-12 rounded-2xl focus:outline-light focus:outline-shadow;
+  @apply flex h-12 rounded-2xl;
 }
 
 .button-group > .button-container:first-of-type {
-  @apply -mr-4 rounded-r-none focus:outline-light;
+  @apply -mr-4 rounded-r-none;
 }
 
 .button-group > .button-container:last-of-type {
-  @apply ml-0 rounded-l-none focus:outline-light;
+  @apply ml-0 rounded-l-none;
 }
 
 .button-container.cancel-button {
@@ -140,7 +124,7 @@ main#append-habit .button-container.selected {
 .vis-button {
   z-index: 101;
   transition: right 0.2s ease-in;
-  @apply w-48 text-lg text-right -right-36 active:outline-light focus:outline-none focus:outline-light fixed border-2 p-3 pl-4 pr-8 m-1 rounded-full shadow-md text-gray-100 bg-gray-700 uppercase;
+  @apply w-48 text-lg text-right -right-36 fixed border-2 p-3 pl-4 pr-8 m-1 rounded-full shadow-md text-gray-100 bg-gray-700 uppercase;
 }
 
 .vis-button span {
