--- a/client/src/components/Header/styles.pcss
+++ b/client/src/components/Header/styles.pcss
@@ -15,7 +15,7 @@
 }
 
 .mask-wrapper #hamburger-wrapper > div:first-child {
-  @apply active:outline-light focus:outline-light hover:bg-gray-700 md:w-8 md:h-8 flex items-center justify-center w-10 h-10 rounded-md;
+  @apply hover:bg-gray-700 md:w-8 md:h-8 flex items-center justify-center w-10 h-10 rounded-md;
 }
 
 .mask-wrapper .wide-nav {
