--- a/client/src/assets/styles/components/global.pcss
+++ b/client/src/assets/styles/components/global.pcss
@@ -85,6 +85,9 @@ div.sm-selector-container .domain-selector {
   .date-card-wrapper {
     max-width: "78%";
   }
+  .date-card {
+    min-width: "12rem";
+  }
 }
 
 @media (min-width: 1024px) {
