--- a/client/src/styles/bundled-styles.css
+++ b/client/src/styles/bundled-styles.css
@@ -1382,6 +1382,12 @@ input[type="text"] {
 .relative {
   position: relative;
 }
+.inset-1 {
+  bottom: 0.25rem;
+  left: 0.25rem;
+  right: 0.25rem;
+  top: 0.25rem;
+}
 .inset-4 {
   bottom: 1rem;
   left: 1rem;
@@ -1540,6 +1546,9 @@ input[type="text"] {
 .-mt-4 {
   margin-top: -1rem;
 }
+.-mt-13 {
+  margin-top: -3.25rem;
+}
 .-mt-14 {
   margin-top: -3.5rem;
 }
@@ -1548,6 +1557,9 @@ input[type="text"] {
 }
 .mr-1 {
   margin-right: 0.25rem;
+}
+.-mr-1.5 {
+  margin-right: -0.375rem;
 }
 .mr-2 {
   margin-right: 0.5rem;
