--- a/client/src/components/Header/styles.pcss
+++ b/client/src/components/Header/styles.pcss
@@ -32,9 +32,9 @@
 }
 
 .nav-label-primary.domain-selector {
-  @apply lg:rounded-3xl rounded-full;
+  @apply lg:rounded-3xl rounded-full bg-white;
 }
 
 .nav-label-primary.date-today {
-  @apply border-balance-pshades-dark rounded-b-3xl pr-2;
+  @apply border-balance-pshades-dark rounded-b-3xl pr-2 bg-white;
 }
