--- a/client/bundle.css
+++ b/client/bundle.css
@@ -2474,7 +2474,7 @@ html {
     line-height: 1.5rem;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .lg\:static {
     position: static;
   }
@@ -2686,9 +2686,9 @@ html {
     max-width: 768px;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .container {
-    max-width: 1025px;
+    max-width: 1024px;
   }
 }
 @media (min-width: 1280px) {
@@ -2817,7 +2817,7 @@ section > h2:first-of-type,
   font-size: 1rem;
   line-height: 1.5rem;
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .nav-label-primary div span i {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -2837,7 +2837,7 @@ section > h2:first-of-type,
   --tw-text-opacity: 1;
   color: rgba(33, 25, 18, var(--tw-text-opacity));
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .user-nav-label {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -2888,7 +2888,7 @@ li#demo-indicator {
   text-transform: uppercase;
   line-height: 2.5rem;
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   #current-habit-label-sm > span:first-of-type,
   #subnav .nav-links > li.hoverable a,
   #current-habit-sm span {
@@ -2918,7 +2918,7 @@ li#demo-indicator {
   text-transform: uppercase;
   line-height: 2.5rem;
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .nav-container span:first-child {
     padding-right: 1rem;
     padding-left: 1.5rem;
@@ -3096,8 +3096,9 @@ main.wrapper {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-#hamburger-wrapper input:checked ~ nav {
+#hamburger-wrapper input:checked + nav {
   margin-right: 1rem;
+  display: block;
   transform: translate(-134%);
   transition: transform 0.7s ease-in;
   -webkit-transition: transform 0.7s;
@@ -3177,13 +3178,16 @@ div.sm-selector-container .domain-selector {
     grid-column: 2 / span 3;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   div.sm-selector-container {
     display: none;
     height: 2rem;
   }
   nav > ul > li:first-of-type {
     border: 0;
+  }
+  .date-card-wrapper {
+    padding: 0rem;
   }
 }
 @media only screen and (min-width: 1920px) {
@@ -3512,7 +3516,7 @@ main#append-habit .button-container.selected {
 #reset-tree {
   bottom: 3.5rem;
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   #reset-tree {
     top: 9rem;
     bottom: auto;
@@ -3528,7 +3532,7 @@ main#append-habit .button-container.selected {
   bottom: 0.25rem;
   z-index: 10;
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   #collapse-tree {
     top: 6rem;
     bottom: auto;
@@ -3551,6 +3555,7 @@ input[type="email"],
 input[type="date"] {
   border-radius: 0.375rem;
   border-width: 2px;
+  background-color: white;
   --tw-border-opacity: 1;
   border-color: rgba(200, 200, 200, var(--tw-border-opacity));
 }
@@ -3577,7 +3582,7 @@ input[type="date"]:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgba(255, 172, 60, var(--tw-ring-opacity));
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   input[type="text"],
   input[type="email"],
   .sm-selector-container select.domain-selector,
@@ -3638,7 +3643,7 @@ input[type="date"] {
     width: 17%;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .mask-wrapper input[type="date"] {
     line-height: 1rem;
     transform: translateY(9px);
@@ -3646,7 +3651,7 @@ input[type="date"] {
     font-size: 1rem;
   }
 }
-@media (max-width: 1025px) {
+@media (max-width: 1024px) {
   select.domain-selector::-ms-expand {
     display: none;
   }
@@ -3724,7 +3729,7 @@ input[type="date"] {
     margin-left: -0.5rem;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   #append-habit > .sub-section-container {
     margin-left: -0.75rem;
     width: 50%;
@@ -3740,7 +3745,7 @@ input[type="date"] {
     margin-right: 0.5rem;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   #append-habit > .sub-section-container:last-of-type {
     position: fixed;
   }
@@ -3752,7 +3757,7 @@ input[type="date"] {
 #append-habit input[type="date"] {
   padding: 0.5rem;
 }
-@media only screen and (min-width: 1025px) {
+@media only screen and (min-width: 1024px) {
   #append-habit > .sub-section-container:last-of-type {
     width: 48%;
   }
@@ -3773,7 +3778,7 @@ input[type="date"] {
   padding-bottom: 0.5rem;
   padding-left: 1rem;
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .mask-wrapper .user-avatar {
     flex-direction: row-reverse;
     border-radius: 0 0 1.5rem 1.5rem;
@@ -3803,7 +3808,7 @@ input[type="date"] {
     padding-right: 0.75rem;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .mask-wrapper #responsive-nav {
     justify-content: flex-end;
     padding-left: 0;
@@ -3836,7 +3841,7 @@ input[type="date"] {
     height: 2rem;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .mask-wrapper #hamburger-wrapper {
     flex: 1 1 auto;
   }
@@ -3879,12 +3884,12 @@ input[type="date"] {
 }
 @media (min-width: 640px) {
   .mask-wrapper .wide-nav {
-    top: 6rem;
+    top: 7rem;
     flex-direction: row;
     flex-wrap: wrap;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .mask-wrapper .wide-nav {
     position: static;
     display: flex;
@@ -3925,7 +3930,7 @@ input[type="date"] {
     padding-left: 0.25rem;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .mask-wrapper .wide-nav .label-wrapper {
     display: flex;
     width: auto;
@@ -3956,7 +3961,7 @@ input[type="date"] {
     flex-direction: column;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .nav-label-primary {
     margin-top: -0.75rem;
     margin-right: 0.5rem;
@@ -3968,7 +3973,7 @@ input[type="date"] {
 .nav-label-primary.domain-selector {
   border-radius: 9999px;
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   .nav-label-primary.domain-selector {
     border-radius: 1.5rem;
   }
