Fix loss of active node on some tree date changes

--- a/client/src/assets/styles/pages/d3vis.scss
+++ b/client/src/assets/styles/pages/d3vis.scss
@@ -18,6 +18,11 @@ g.nodes {
   stroke-width: 8px;
 }
 
+.expand-arrow {
+  stroke: #f8f8f8;
+  stroke-width: 2px;
+}
+
 .legend-svg .cell,
 .controls-svg {
   position: relative;
